# jelal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE-UNICODE-3.0  Makefile.toml  README.md  cbindgen.toml  pyproject.toml
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs  resolve_type.rs  sift.rs  util.rs  visit_mut.rs
examples/c/: readme_example.c
examples/py/: readme_example.py
jelal_proc/: Cargo.toml  README.md
jelal_proc/src/: lib.rs
makers/: README.md  common.rs  install_lib.rs  install_newest_wheel.rs  test-complete.rs  test-makers.ds
src/: lib.rs  macro.rs  primitive.rs  traits.rs  utility.rs
src/ffi/: generated.rs  mod.rs
