[package]
name = "jelal"
version = "0.3.0"
description = "A minimal Jalali (Persian/Iranian) calendar date convertor"
edition = "2024"
rust-version = "1.85" # technically much lower, but aim is for 2024
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
repository = "https://github.com/Davoodeh/jelal"
license = "Apache-2.0 OR MIT"
keywords = ["calendar", "Persian", "Jalali", "Jelal"]
categories = ["date-and-time", "no-std::no-alloc", "wasm"]

[lib]
name = "jelal"
crate-type = ["cdylib"]

[features]
default = ["const"]
std = []
const = []
c = []
wasm = ["dep:wasm-bindgen"]
py = ["dep:pyo3", "std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
debug = false
lto = true
opt-level = 3

[dependencies]
jelal_proc = { version = "0.3.0", path = "./jelal_proc" }

wasm-bindgen = { version = "0.2.100", optional = true }
pyo3 = { version = "0.24.2", features = ["multiple-pymethods", "extension-module"], optional = true }
