[package]
name = "jelal"
version = "0.4.0"
description = "A minimal, no-std modern Jalali (Persian/Iranian/Shamsi) calendar for developers with diverse language support (Rust, JS/TS/WASM, C/C++, Python, and more)"
edition = "2024"
rust-version = "1.85" # technically much lower, but aim is for 2024
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
repository = "https://github.com/Davoodeh/jelal"
license = "Apache-2.0 OR MIT"
keywords = ["calendar", "Persian", "Jalali", "Jelal"]
categories = ["date-and-time", "no-std::no-alloc", "wasm"]

[lib]
name = "jelal"
crate-type = ["cdylib"]

[features]
std = []
ffi = []
c = ["ffi"]
wasm = ["ffi", "std", "dep:wasm-bindgen"]
py = ["ffi", "std", "dep:pyo3"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
debug = false
lto = true
opt-level = 3

[dependencies]
jelal_proc = { version = "0.4.0", path = "./jelal_proc" }

# extension-module feature for pyo3 is disabled by default (not to fail the
# tests) so build with --features=pyo3/extension-module when making the package
# as it is in the build script.
pyo3 = { version = "0.25.1", features = ["multiple-pymethods", "macros"], optional = true }
wasm-bindgen = { version = "0.2.100", features = ["msrv"], default-features = false, optional = true }
