[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "jelal"
dynamic = ["version"]
authors = [{name = "M. Yas. Davoodeh", email = "MYDavoodeh@gmail.com"}]
description = "PyO3 wrapped Jelal library"
license = "Apache-2.0 OR MIT"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/Davoodeh/jelal"

[tool.maturin]
features = ["py"]
strip = true
