[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "jelal"
dynamic = ["version"]
authors = [{ name = "M. Yas. Davoodeh", email = "MYDavoodeh@gmail.com" }]
description = "PyO3 wrapped Jelal library"
license = "Apache-2.0 OR MIT"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/Davoodeh/jelal"

[tool.maturin]
# maturin versions after 1.8.7 up to 1.9.1 cannot be built easily on rustc 1.88
# and forward (may even before) for xwin errors (check docs.rs build logs)
# https://docs.rs/crate/maturin/1.9.1/builds/2299940
features = ["py", "pyo3/extension-module"]
strip = true
