[package]
name = "jelal-internal-codegen"
version = "0.1.0"
description = "A primitive hardcoded binary to generate some code for `jelal`"
edition = "2024"
rust-version = "1.85"
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
repository = "https://github.com/Davoodeh/jelal"
license = "Apache-2.0 OR MIT"

publish = false

[dependencies]
syn = { version = "2.0.104", features = ["full", "visit", "visit-mut"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
