[package]
name = "jelal_proc"
version = "0.1.0"
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
description = "Generate simple bindgen signitures for Jelal calendar"
edition = "2024"
rust-version = "1.85" # technically much lower, but aim is for 2024
repository = "https://github.com/Davoodeh/jelal"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
