[package]
name = "jelal_proc"
version = "0.5.0"
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]
description = "Reserved crate for future (and past usage) of proc macros in `jelal`"
edition = "2024"
rust-version = "1.85" # technically much lower, but aim is for 2024
repository = "https://github.com/Davoodeh/jelal"
license = "Apache-2.0 OR MIT"
keywords = ["Jalali", "Jelal"]
categories = ["development-tools::ffi"]

[lib]
proc-macro = true

[dependencies]
